<resources>
    <string name="app_name">Hotkey</string>

    <string name="title_activity_live_screen">ScreenActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_qr_code_scanner">QR Code Scanner</string>

    <!-- Main Activity -->
    <string name="btm_bar_keyboard_btn_desc">Press to open keyboard</string>
    <string name="btm_bar_connections_btn_desc">Press to open connections screen</string>
    <string name="btm_bar_mouse_btn_desc">Press to open mouse/touchpad</string>
    <string name="btm_bar_extras_btn_desc">Press to show extra options</string>
    <string name="btm_bar_settings_btn_desc">Settings and preferences</string>

    <!-- Connections Fragment -->
    <string name="connections_wifi_btn_text">WiFi / LAN</string>
    <string name="connections_bluetooth_btn_text">Bluetooth</string>
    <string name="connections_connect_btn_text">Connect</string>
    <string name="connections_disconnect_btn_text">Disconnect</string>
    <string name="connections_ip_address_text_field_label">IP Address</string>
    <string name="connections_port_text_field_label">Port</string>

    <string name="connection_success_msg">Connection successful</string>
    <string name="connection_error_msg">Failed to connect</string>
    <string name="connection_closed_msg">Connection closed</string>
    <string name="not_connected_msg">Not Connected</string>
    <string name="need_to_connect_first_msg">You need to connect first</string>
    <string name="retry_msg">Retry</string>

    <!-- Extras Fragment -->
    <string name="extras_live_screen_btn_desc">Live streams the PC screen</string>
    <string name="extras_ppt_btn_desc">Presentation assistant</string>
    <string name="extras_pdf_btn_desc">PDF document reading/presentation assistant</string>
    <string name="extras_macros_btn_desc">Make and execute custom key combinations</string>
    <string name="extras_multimedia_btn_desc">Play, pause, skip tracks, etc. on multimedia content</string>
    <string name="extras_gamepad_btn_desc">Use phone as a game controller</string>

    <!-- Settings -->
    <string name="settings_title_connect">Connect</string>
    <string name="settings_title_mouse">Mouse/Touchpad</string>
    <string name="settings_title_live_screen">Live Screen</string>
    <string name="settings_title_gamepad">Gamepad</string>
    <string name="settings_title_pdf">PDF Assistant</string>

    <string name="settings_key_connect_timeout">connectTimeOut</string>
    <string name="settings_title_connect_timeout">Connect timeout</string>
    <string name="settings_summary_builder_connect_timeout">Attempt to connect times out after %s ms</string>

    <string name="settings_key_enter_ip">enterIp</string>
    <string name="settings_title_enter_ip">Enter IP address and port</string>
    <string name="settings_summary_enter_ip">Enter IP address and port instead of scanning QR code</string>

    <string name="settings_key_mouse_sensitivity">mouseSensitivity</string>
    <string name="settings_title_mouse_sensitivity">Mouse/touchpad sensitivity</string>

    <string name="settings_key_live_screen_fps">liveScreenFPS</string>
    <string name="settings_title_live_screen_fps">FPS</string>
    <string name="settings_summary_builder_live_screen_fps">%s Hz</string>

    <string name="settings_key_live_screen_img_quality">liveScreenImageQuality</string>
    <string name="settings_title_live_screen_img_quality">Image quality</string>
    <string name="settings_summary_live_screen_img_quality">Quality of image sent from server (Very high quality might cause lag)</string>

    <string name="settings_key_live_screen_mouse_sensitivity">liveScreenMouseSensitivity</string>
    <string name="settings_title_live_screen_mouse_sensitivity">Cursor sensitivity</string>

    <string name="settings_key_gamepad_edit_layout">gamepadEditLayout</string>
    <string name="settings_title_gamepad_edit_layout">Edit Gamepad layout</string>
    <string name="settings_summary_gamepad_edit_layout">Edit the layout of the buttons in the gamepad</string>

    <string name="settings_key_gamepad_right_stick_sensitivity">gamepadRightStickSensitivity</string>
    <string name="settings_title_gamepad_right_stick_sensitivity">Right stick sensitivity</string>

    <string name="settings_key_pdf_platform">pdfPlatform</string>
    <string name="settings_title_pdf_platform">PDF Reader Program</string>
    <string name="settings_dialog_title_pdf_platform">Choose the PDF reader program to control</string>

    <!-- Live Screen -->
    <string name="live_screen_only_wifi">Only available on Wifi</string>

    <!-- Edit Macros -->
    <string name="edit_macro_name">Enter Macro Name</string>
    <string name="save_macro">Save</string>
    <string name="cancel_macro">Cancel</string>

    <!-- PDF -->
    <string name="goto_page">Goto Page :</string>
    <string name="page_number">Page Number</string>
    <string name="beginning">Beginning</string>
    <string name="current">Current</string>
    <string name="select_platform">Select Platform</string>
    <string name="acrobat_reader">Acrobat Reader</string>
    <string name="evince_reader">Evince Reader</string>
    <string name="fit_width">FIT Width</string>
    <string name="fit_height">FIT Height</string>

    <!-- Keyboard -->
    <string name="key_esc">ESC</string>
    <string name="key_tab">Tab</string>
    <string name="key_shift">Shift</string>
    <string name="key_ctrl">Ctrl</string>
    <string name="key_pgup">PgUp</string>
    <string name="key_pgdn">PgDn</string>
    <string name="key_arrow_up">Up</string>
    <string name="key_arrow_left">Left</string>
    <string name="key_arrow_down">Down</string>
    <string name="key_arrow_right">Right</string>
    <string name="key_copy">Copy</string>
    <string name="key_paste">Paste</string>

    <!-- Gamepad -->
    <string name="gamepad_data_key">gamepadData</string>
    <string name="deleteMacro">Delete</string>
</resources>
