<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <FrameLayout
        android:id="@+id/frameContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <ImageButton
            android:id="@+id/keyboardButton"
            style="@style/MenuIconStyle"
            android:src="@drawable/ic_keyboard_white_24dp"
            android:contentDescription="@string/btm_bar_keyboard_btn_desc" />

        <Space
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <ImageButton
            android:id="@+id/connectionButton"
            style="@style/MenuIconStyle"
            android:src="@drawable/ic_network_wifi_white_24dp"
            android:contentDescription="@string/btm_bar_connections_btn_desc" />

        <Space
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <ImageButton
            android:id="@+id/mouseButton"
            style="@style/MenuIconStyle"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:src="@drawable/ic_mouse_white_24dp"
            android:contentDescription="@string/btm_bar_mouse_btn_desc" />

        <Space
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <ImageButton
            android:id="@+id/extrasButton"
            style="@style/MenuIconStyle"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:src="@drawable/ic_more_horiz_white_24dp"
            android:contentDescription="@string/btm_bar_extras_btn_desc" />

        <Space
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </LinearLayout>

</LinearLayout>